# ToolBlind

./: .env.example  .gitignore  README.md  api.py  openapi.json  pyproject.toml  requirements.txt
data/tasks/: tasks.json
scripts/: analyze_results.py  generate_dataset.py  run_all_experiments.py  run_experiment.py
tests/: test_agents.py  test_dataset.py  test_environment.py  test_experiments.py  test_scoring.py
toolblind/: __init__.py
toolblind/agents/: __init__.py  base.py  claude.py  gemini.py  openai.py  react.py
toolblind/dataset/: __init__.py  catalog.py  generator.py  tasks.py  validator.py
toolblind/environment/: __init__.py  registry.py  simulator.py  trajectory.py
toolblind/evaluation/: __init__.py  analyzer.py  metrics.py  scorer.py
toolblind/experiments/: __init__.py  baseline.py  commitment.py  cot.py  framing.py  registry_size.py
toolblind/utils/: __init__.py  cache.py  config.py  logging.py
